--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -348,7 +348,7 @@ color:#44433b;
   background-color:transparent;
     border:1px solid #504332;
     height:18px;
-    margin:5px;
+    margin-bottom:5px;
 }
 .form-send{
     color:#ffffff;
