--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -360,3 +360,9 @@ color:#44433b;
     margin:15px;
    
 }
+.txt-area{
+    background-color:transparent;
+    border:1px solid #504332;
+   
+    margin-bottom:5px;
+}
