--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -67,18 +67,19 @@ header{
         border-left: 1px solid rgba(80, 67, 50, 0.20);
     }
     #header-bottom-nav ul{
+        padding:0;
         display:flex;
         margin-top: 0;
         margin-bottom: 0;
-        /*justify-content:space-around;*/
-        /*background-color:lightgreen;*/
     }
     #header-bottom-nav ul a{
+        padding:0;
+        margin:0;
         font-weight:bold;
         font-size:14px;
     }
     #header-bottom-nav ul li{
-        padding:0 12px 0 12px;
+        margin-right:25px;
     }
     figure{
         display:flex;
