--- a/casualshoes/casualshoes/Site1.Master
+++ b/casualshoes/casualshoes/Site1.Master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Home</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
@@ -13,32 +13,34 @@
         <div>
             <header runat="server">
                 <figure id="casualshoes-logo">
-                    <img src="../images/png/casualshoes.png" />
+                    <a href="Home.aspx">
+                        <img src="../images/png/casualshoes.png" />
+                    </a>
                 </figure>
                 <div id="header-menus">
                     <div id="header-top-nav">
-                        
+
                         <div>
                             <asp:TextBox ID="SearchBoxID" placeholder="Ange sökord..." runat="server"></asp:TextBox>
                             <asp:Button ID="Search" runat="server" OnClick="Search_Click" Text="Sök" />
                         </div>
                         <figure>
-                            <img src="../images/png/service.png" / >
+                            <img src="../images/png/service.png" />
                             <figcaption class="icon-text"><a href="Contact.aspx">Kontakta Kundservice</a></figcaption>
                         </figure>
                         <figure>
                             <img src="../images/png/user.png" />
-                            <asp:Label ID="lbl_login" runat="server" Text="Label"   class="icon-text"></asp:Label>
-                            <asp:LinkButton ID="LinkButton1" runat="server" OnClick="LinkButton1_Click"  class="icon-text">LinkButton</asp:LinkButton>
-                        </figure> 
+                            <asp:Label ID="lbl_login" runat="server" Text="Label" class="icon-text"></asp:Label>
+                            <asp:LinkButton ID="LinkButton1" runat="server" OnClick="LinkButton1_Click" class="icon-text">LinkButton</asp:LinkButton>
+                        </figure>
                     </div>
                     <div id="header-bottom-nav">
                         <ul>
-                            <li><a href="Home.aspx"  class="icon-text">HEM</a></li>
-                            <li><a href="Sneakers.aspx"  class="icon-text">SNEAKERS</a></li>
-                            <li><a href="Sandals.aspx"  class="icon-text">SANDALER</a></li>
-                            <li><a href="Boots.aspx"  class="icon-text">KÄNGOR & BOOTS</a></li>
-                            <li><a href="LowShoes.aspx"  class="icon-text">LÅGSKOR</a></li>
+                            <li><a href="Home.aspx" class="icon-text">HEM</a></li>
+                            <li><a href="Sneakers.aspx" class="icon-text">SNEAKERS</a></li>
+                            <li><a href="Sandals.aspx" class="icon-text">SANDALER</a></li>
+                            <li><a href="Boots.aspx" class="icon-text">KÄNGOR & BOOTS</a></li>
+                            <li><a href="LowShoes.aspx" class="icon-text">LÅGSKOR</a></li>
                         </ul>
                         <figure>
                             <img src="../images/png/shoppingcrart.png" />
@@ -76,6 +78,7 @@
                 </section>
                 <article id="footer-bottom-info">
                     &copy 2016 CasualShoes.com 
+               
                 </article>
             </footer>
         </div>
