--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -311,6 +311,13 @@ section#product-details-specs-section {
 .SizeLabel{
     position:absolute;
 }
+.AddedToCart{
+    width:160px;
+    position:absolute;
+    margin-left: 664px;
+    margin-top: 100px;
+    color: #c07a0e;
+}
 
 
 
