footer: casualshoes.com is now a link

--- a/casualshoes/casualshoes/Site1.Master
+++ b/casualshoes/casualshoes/Site1.Master
@@ -77,7 +77,7 @@
                     </article>
                 </section>
                 <article id="footer-bottom-info">
-                    &copy 2016 CasualShoes.com 
+                    &copy 2016&nbsp;<a href="Home.aspx">CasualShoes.com</a>  
                
                 </article>
             </footer>
