--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -360,16 +360,20 @@ input#ContentPlaceHolder_txt_fullname {
      
      margin-bottom:35px;
 
-         border: 1px solid rgba(122, 84, 38, 0.2);
+    border: 1px solid rgba(122, 84, 38, 0.2);
+    transition:.2s ease-out;
     box-sizing: border-box;
-
 }
 .product-list-container a{
     color:black;
     text-decoration:none;
+    transition:.2s ease-out;
 }
 .product-list-container:hover a{
-    color:sandybrown;
+    color:rgba(122, 84, 38, 1.0);
+}
+.product-list-container:hover {
+    border: 1px solid rgba(122, 84, 38, 0.4);
 }
 .product-list-container img{
      width: 165px;
