--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -78,6 +78,7 @@ header{
         margin:0;
         font-weight:bold;
         font-size:14px;
+        transition:.1s ease-in-out;
     }
     #header-bottom-nav ul li{
         margin-right:25px;
@@ -133,6 +134,9 @@ footer{
     padding:15px 0;
     display:flex;
     justify-content:space-around;
+}
+#footer-top-section a{
+   transition:.1s ease-in-out;
 }
 #footer-top-section a:hover{
     color:gray;
@@ -361,13 +365,13 @@ input#ContentPlaceHolder_txt_fullname {
      margin-bottom:35px;
 
     border: 1px solid rgba(122, 84, 38, 0.2);
-    transition:.2s ease-out;
+    transition:.1s ease-in-out;
     box-sizing: border-box;
 }
 .product-list-container a{
     color:black;
     text-decoration:none;
-    transition:.2s ease-out;
+   transition:.1s ease-in-out;
 }
 .product-list-container:hover a{
     color:rgba(122, 84, 38, 1.0);
